// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi Choice Arrow controls 1`] = `
"? What do you want to count in garson.config.js file?
  ◉ Lines
▇ ◉ Words
  ◯ Characters
  ◯ Everything"
`;

exports[`Multi Choice Arrow controls 2`] = `
"? What do you want to count in garson.config.js file?
  ◉ Lines
  ◉ Words
▇ ◯ Characters
  ◯ Everything"
`;

exports[`Multi Choice Arrow controls 3`] = `
"? What do you want to count in garson.config.js file?
  ◉ Lines
  ◉ Words
  ◯ Characters
▇ ◯ Everything"
`;

exports[`Multi Choice Arrow controls 4`] = `
"? What do you want to count in garson.config.js file?
  ◉ Lines
  ◉ Words
  ◯ Characters
▇ ◯ Everything"
`;

exports[`Multi Choice Arrow controls 5`] = `
"? What do you want to count in garson.config.js file?
  ◉ Lines
  ◉ Words
▇ ◯ Characters
  ◯ Everything"
`;

exports[`Multi Choice Arrow controls 6`] = `
"? What do you want to count in garson.config.js file?
  ◉ Lines
▇ ◉ Words
  ◯ Characters
  ◯ Everything"
`;

exports[`Multi Choice Arrow controls 7`] = `
"? What do you want to count in garson.config.js file?
▇ ◉ Lines
  ◉ Words
  ◯ Characters
  ◯ Everything"
`;

exports[`Multi Choice Arrow controls 8`] = `
"? What do you want to count in garson.config.js file?
▇ ◉ Lines
  ◉ Words
  ◯ Characters
  ◯ Everything"
`;

exports[`Multi Choice Initial render 1`] = `
"? What do you want to count in garson.config.js file?
▇ ◉ Lines
  ◉ Words
  ◯ Characters
  ◯ Everything"
`;

exports[`Multi Choice Toggle selection 1`] = `
"? What do you want to count in garson.config.js file?
▇ ◯ Lines
  ◉ Words
  ◯ Characters
  ◯ Everything"
`;

exports[`Multi Choice Toggle selection 2`] = `
"? What do you want to count in garson.config.js file?
  ◯ Lines
  ◉ Words
▇ ◉ Characters
  ◯ Everything"
`;

exports[`Multi Choice onChangeMiddleware 1`] = `
"? What do you want to count in garson.config.js file?
  ◯ Lines
  ◯ Words
  ◯ Characters
▇ ◉ Everything"
`;

exports[`Multi Choice onChangeMiddleware 2`] = `
"? What do you want to count in garson.config.js file?
  ◯ Lines
  ◯ Words
▇ ◉ Characters
  ◯ Everything"
`;
